--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -749,7 +749,7 @@ path.q2-3 {
     transition: all ease-in .3s;
     &:hover {
         stroke-width: 1;
-        fill: #c22361;
+        fill: #f5ff7d;
         fill-opacity: .5;
     }
 }
