--- a/css/styles.css
+++ b/css/styles.css
@@ -1025,8 +1025,8 @@ path.q2-3 {
     height: 70vh;
 
     color: #111;
-    border-top: 10px solid #81165a;
-    border-bottom: 10px solid #81165a;
+    border-top: 10px solid #2be5cf;
+    border-bottom: 10px solid #2be5cf;
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, .18);
 }
@@ -1131,8 +1131,8 @@ path.q2-3 {
 
 .distritos:hover {
   stroke-width: 1;
-  fill: #f5ff7d;
-  fill-opacity: .5;
+  fill: #2be5cf;
+  fill-opacity: .8;
 }
 
 #map {
