--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -654,10 +654,10 @@ path.q2-3 {
 .tooltip {
     font-weight: bold;
     position: absolute;
-    top: 10vh;
+    top: 5vh;
     right: 2rem;
     min-width: 24rem;
-    height: 70vh;
+    height: 75vh;
     color: #111;
     background-color: #fff;
     border-top: 10px solid #2be5cf;
@@ -685,7 +685,7 @@ path.q2-3 {
 .tooltipPartido {
     font-family: var(--fontSystem);
     font-weight: bold;
-    margin: 8px 0;
+    margin: 16px 0;
     + p {
         display: none;
     }
@@ -694,7 +694,16 @@ path.q2-3 {
         padding: 8px;
     }
     .resultado {
-        padding-right: 0;
+        padding: 0;
+        padding-left: 8px;
+    }
+    .resultadoVotos {
+        padding: 0;
+        padding-left: 8px;
+        &:not(:first-child) {
+            color: #333;
+            font-size: 12px;
+        }
     }
 }
 
@@ -704,6 +713,7 @@ path.q2-3 {
         font-size: 14px;
         min-width: 50%;
         display: inline-block;
+        vertical-align: middle;
     }
     .resultado {
         padding-left: 16px;
