--- a/src/css/_color.css
+++ b/src/css/_color.css
@@ -110,6 +110,14 @@
     background-color: var(--chunta);
 }
 
+.bgc-orden {
+    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+}
+
+.bgc-acuerdos {
+    background-image: linear-gradient(to top, #72afd3 0%, #37ecba 100%);
+}
+
 @media only screen and (min-width: 30em) {
     .bgc-transparent--s {
         background-color: transparent;
