--- a/css/styles.css
+++ b/css/styles.css
@@ -1605,11 +1605,11 @@ path.q2-3 {
 }
 
 .bgc-orden {
-    background: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
+    background: #c3cfe2;
 }
 
 .bgc-acuerdos {
-    background-image: linear-gradient(to top, #72afd3 0%, #37ecba 100%);
+    background-image: #37ecba;
 }
 
 @media only screen and (min-width: 30em) {
@@ -2138,6 +2138,10 @@ path.q2-3 {
 
 .padding-r0 {
     padding-right: 0;
+}
+
+.padding__5 {
+    padding: .5rem;
 }
 
 .padding-1 {
