--- a/css/styles.css
+++ b/css/styles.css
@@ -1518,26 +1518,8 @@ path.q2-3 {
     background-color: transparent;
 }
 
-.bgc-mint {
-    background-color: hsl(170, 88%, 47%);
-}
-
-.bgc-mint:hover {
-  transition: background-color .3s ease-in;
-  background-color: hsl(170, 56%, 47%);
-}
-
 .night-rider {
     color: #431729;
-}
-
-.bgc-french-grey {
-    background-color: hsl(283, 11%, 88%);
-}
-
-.bgc-french-grey:hover {
-  transition: background-color .3s ease-in;
-  background-color: hsl(283, 5%, 68%);
 }
 
 .bunting {
@@ -1605,11 +1587,11 @@ path.q2-3 {
 }
 
 .bgc-orden {
-    background: #c3cfe2;
+    background-color: #c3cfe2;
 }
 
 .bgc-acuerdos {
-    background-image: #37ecba;
+    background-color: #37ecba;
 }
 
 @media only screen and (min-width: 30em) {
