--- a/css/styles.css
+++ b/css/styles.css
@@ -1071,13 +1071,18 @@ path.q2-3 {
 }
 
 .tooltipPartido .resultado {
+  display: inline-block;
+  min-width: 50%;
   padding: 0;
-  padding-left: 8px;
+  text-align: left;
 }
 
 .tooltipPartido .resultadoVotos {
+  display: block;
+  min-width: 50%;
   padding: 0;
   padding-left: 8px;
+  text-align: right;
 }
 
 .tooltipPartido .resultadoVotos:not(:first-child) {
@@ -1088,15 +1093,21 @@ path.q2-3 {
 .tooltipLeyenda span, .tooltipPartido span {
   font-size: 0.88rem;
   display: inline-block;
-  min-width: 50%;
   vertical-align: middle;
 }
 
 .tooltipLeyenda .resultado, .tooltipPartido .resultado {
-  min-width: 45%;
-  padding-left: 16px;
-  text-align: right;
+  min-width: 48%;
   color: #111;
+}
+
+.tooltipLeyenda span {
+  min-width: 48%;
+}
+
+.tooltipLeyenda .resultado {
+  min-width: 48%;
+  text-align: right;
 }
 
 .container-tooltip-leyenda {
