--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -881,7 +881,7 @@ path.q2-3 {
 .bislai-home-body-right-text {
     display: inline-block;
     font-size: 1rem;
-    padding-left: 1rem;
+    font-family: var(--fontRoboto);
     margin: 0;
     margin-bottom: .5rem;
 }
