--- a/css/styles.css
+++ b/css/styles.css
@@ -1096,9 +1096,20 @@ path.q2-3 {
   vertical-align: middle;
 }
 
+.tooltipLeyenda .resultado-izda, .tooltipPartido .resultado-izda {
+  display: inline-block;
+  width: 75%;
+  padding: 0;
+}
+
 .tooltipLeyenda .resultado, .tooltipPartido .resultado {
-  min-width: 48%;
+  min-width: 24%;
   color: #111;
+}
+
+.tooltipLeyenda .titulo-partido, .tooltipPartido .titulo-partido {
+  min-width: 18%;
+  padding: 0;
 }
 
 .tooltipLeyenda span {
@@ -1269,13 +1280,13 @@ path.q2-3 {
 
 .bislai-home-body-right {
     position: absolute;
-    top: 16rem;
+    top: 18rem;
     left: 12rem;
 
     display: inline-block;
 
     max-width: 35rem;
-    padding: 5rem;
+    padding: 2rem;
 
     background-color: #EFFC11;
 }
