--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -932,26 +932,42 @@ path.q2-3 {
 .partido-container {
     max-width: 64rem;
     margin: 0 auto;
+    overflow: hidden;
 }
 
 .partido-card {
     background-color: #ccc;
-    width: 32rem;
+    width: 40rem;
     height: 18rem;
     background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
-    margin: 6rem 0;
-    border-radius: 10px;
+    margin: 2rem 0 5rem;
     &:hover {
         background-color: #000;
     }
 }
 
+.partido-card-zec {
+    background-image: linear-gradient(to top, #f77062 0%, #fe5196 100%);
+}
+
+.partido-card-psoe {
+    background-image: linear-gradient(to top, #ff0844 0%, #ffb199 100%);
+}
+
+.partido-card-cs {
+    background-image: linear-gradient(-60deg, #ff5858 0%, #f09819 100%);
+}
+
+.partido-card-cha {
+    background-image: linear-gradient(to right, #fa709a 0%, #fee140 100%);
+}
+
 .partido-card-top {
     position: absolute;
     background-color: #fff;
-    width: 20rem;
+    width: 25rem;
     padding: 2rem 1rem;
-    left: 12rem;
+    left: 15rem;
     top: 6rem;
     border-bottom: 5px solid var(--pp);
     &:hover {
@@ -960,9 +976,34 @@ path.q2-3 {
     }
 }
 
+.partido-card-top-zec {
+    border-bottom: 5px solid var(--zec);
+}
+
+.partido-card-top-psoe {
+    border-bottom: 5px solid var(--psoe);
+}
+
+.partido-card-top-cs {
+    border-bottom: 5px solid var(--ciudadanos);
+}
+
+.partido-card-top-cha {
+    border-bottom: 5px solid var(--chunta);
+}
+
+.partido-card-right {
+    float: right;
+}
+
+.partido-card-top-right {
+    left: -9rem;
+}
+
 .partido-card-title {
     font-size: 2.5rem;
     margin: 0;
+    font-weight: normal;
 }
 
 .partido-card-votos,
