--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -396,10 +396,14 @@ http://www.tipue.com/search
 .tipue_search_content_title {
     color: #666;
     margin-top: 21px;
+    &:not(:first-child) {
+        border-top: 1px solid #ccc;
+        padding: 10px 0;
+    }
 }
 
 .tipue_search_content_title a {
-    color: #666;
+    color: #000;
     text-decoration: none;
 }
 
@@ -429,7 +433,7 @@ http://www.tipue.com/search
     color: #333;
     word-wrap: break-word;
     hyphens: auto;
-    margin-top: 5px;
+    margin-top: 8px;
 }
 
 .tipue_search_content_bold {
@@ -970,9 +974,10 @@ path.q2-3 {
     left: 15rem;
     top: 6rem;
     border-bottom: 5px solid var(--pp);
+    box-shadow: 0 2px 20px 2px rgba(149, 154, 154, .27);
+    transition: all .3s ease-in;
     &:hover {
         top: 5.5rem;
-        transition: all .3s ease-in;
     }
 }
 
