--- a/css/styles.css
+++ b/css/styles.css
@@ -1358,12 +1358,43 @@ path.q2-3 {
     height: 18rem;
     margin: 2rem 0 5rem;
 
+    text-decoration: none;
+
+    color: #121;
     background-color: #ccc;
     background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
 }
 
 .partido-card:hover {
   background-color: #000;
+}
+
+.partido-card:hover .partido-card-bg {
+  transform: scaleX(1);
+}
+
+.partido-card:hover .partido-card-top {
+  top: 5.5rem;
+  border-width: 10px;
+}
+
+.partido-card-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+
+    transition: transform .5s ease-in;
+    transform: scaleX(0);
+    transform-origin: right;
+
+    background-color: rgba(255, 255, 255, .5);
+}
+
+.partido-card-left {
+    transform-origin: left;
 }
 
 .partido-card-zec {
@@ -1395,10 +1426,6 @@ path.q2-3 {
     border-bottom: 5px solid #0080b8;
     background-color: #fff;
     box-shadow: 0 2px 20px 2px rgba(149, 154, 154, .27);
-}
-
-.partido-card-top:hover {
-  top: 5.5rem;
 }
 
 .partido-card-top-zec {
