--- a/src/css/_comun.css
+++ b/src/css/_comun.css
@@ -945,9 +945,34 @@ path.q2-3 {
     height: 18rem;
     background-image: radial-gradient(circle 248px at center, #16d9e3 0%, #30c7ec 47%, #46aef7 100%);
     margin: 2rem 0 5rem;
+    text-decoration: none;
+    color: var(--black);
     &:hover {
         background-color: #000;
+        .partido-card-bg {
+            transform: scaleX(1);
+        }
+        .partido-card-top {
+            top: 5.5rem;
+            border-width: 10px;
+        }
     }
+}
+
+.partido-card-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(255, 255, 255, .5);
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: transform .5s ease-in;
+}
+
+.partido-card-left {
+    transform-origin: left;
 }
 
 .partido-card-zec {
@@ -976,9 +1001,6 @@ path.q2-3 {
     border-bottom: 5px solid var(--pp);
     box-shadow: 0 2px 20px 2px rgba(149, 154, 154, .27);
     transition: all .3s ease-in;
-    &:hover {
-        top: 5.5rem;
-    }
 }
 
 .partido-card-top-zec {
